--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,67 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.navbar {
+  background-color: #c62828;
+  padding: 10px;
+  
+}
+
+.navbar a {
+  color: white; 
+  margin-right: 10px; 
+  text-decoration: none; 
+}
+
+.navbar a:hover {
+  color: #ffccbc; 
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #c62828; 
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  display: block; 
+  color: white; 
+  text-decoration: none;
+  padding: 10px;
+  border-bottom: 1px solid #ffccbc;
+}
+.dropdown-content a:last-child {
+  border-bottom: none; 
+}
+
+.dropdown-content a:hover {
+  color: #ffccbc; 
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar a {
+    margin: 0.5em 0;
+  }
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
