--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,83 @@ img {
   max-width: 100%;
   height: 600px;
 }
+.title-container {
+  border: none;
+  border-radius: 40px 10px;
+  background: gold;
+  
+  
+}
+.img-container {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  gap: 50px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgb(226, 225, 225);
+}
+
+.ing-container {
+  background-image: url('public/Recipe Images/notepad.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 300px;
+  width: 500px;
+  margin: 20px;
+align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  border-radius: 40px 10px;
+  padding: 20px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #000000;
+  
+}
+.ing-container h1 {
+  font-size: 30px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #000000;
+  margin: 2px;
+  text-decoration: underline;
+  text-decoration-color: #c62828;
+}
+.fast-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(226, 225, 225);
+  border-radius: 40px 10px;
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  flex-direction: row;
+  gap: 150px;
+
+
+}
+.fast-info h1 {
+  font-size: 30px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #000000;
+  margin: 2px;
+  text-decoration: underline;
+  text-decoration-color: #c62828;
+  
+}
+.description {
+  
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(226, 225, 225);
+  border-radius: 40px 10px;
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  flex-direction: row;
+  gap: 150px;
+}
