--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ nav ul {
 
 nav ul li {
   display: inline-block;
+  
 }
 
 nav ul li a {
@@ -34,6 +35,13 @@ nav ul li a {
   font-size: 18px;
   text-decoration: none;
   display: block;
+}
+nav ul li img {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: 5px solid rgba(0, 35, 122, 0.5);
+
 }
 
 nav ul li a:hover {
