--- a/src/Pages/Recipes.css
+++ b/src/Pages/Recipes.css
@@ -5,6 +5,7 @@
     justify-content: center;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
   
 .recipes-list {
@@ -20,6 +21,7 @@
     list-style: none; /* This will remove the bullet point */
     border: 1px solid #000; /* This will add a border around each item */
     transition: background-color 0.3s ease; /* This will animate the background color change */
+    border-radius: 8px;
     
 }
 
@@ -28,14 +30,21 @@
     width: 100%;
 }
 
+.recipe-container h2 {
+    margin: 10px;
+    display: inline-block;
+    width: 100%;
+    padding: 10px;   
+}
 .recipe-item h3 {
     margin: 10px;
     display: inline-block;
     width: 100%;
+    
 }
 
 .recipe-item:hover {
-    background-color: rgba(255, 255, 255, 0.7); /* This will make the background color semi-transparent white on hover */
+    background-image: linear-gradient(to right top, rgba(142, 68, 173, 0.7) 0%, rgba(52, 152, 219, 0.7) 100%);
 }
 .recipe-item a {
     display: block;
