--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,26 @@ align-items: center;
   flex-direction: row;
   gap: 150px;
 }
+.handleButtons {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  gap: 50px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgb(226, 225, 225);
+  border-radius: 40px 10px;
+  padding: 20px;
+  margin: 20px;
+  flex-direction: row;
+  gap: 150px;
+}
+.handleButtons button {
+  background-color: #c62828;
+  color: white;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
