--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@ align-items: center;
   margin: 20px;
   flex-direction: row;
   gap: 150px;
+  
 }
 .handleButtons button {
   background-color: #c62828;
@@ -115,4 +116,5 @@ align-items: center;
   font-weight: bold;
   border: none;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
