--- a/src/Pages/homepage.module.css
+++ b/src/Pages/homepage.module.css
@@ -7,11 +7,13 @@ header {
 
 body {
   margin-bottom: 50px;
+  background-color: black;
 }
 
 .cuisineSection {
   margin: 20px;
   padding: 20px;
+  
   padding-bottom: 40px;
   background-color: #fff;
   border-radius: 8px;
