--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-image: linear-gradient(to right top, #8e44ad 0%, #3498db 100%);
+    background-color: black;
     margin: 0 auto;
     padding: 60px 0;
     width: 100%;
@@ -24,7 +24,7 @@
 .navbar ul li a {
     padding: 18px;
     text-transform:uppercase;
-    color: rgba(0, 35, 122, 0.5);
+    color: red;
     font-size: 18px;
     text-decoration: none;
     display: block;
@@ -34,13 +34,13 @@
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    border: 5px solid rgba(0, 35, 122, 0.5);
+    border: 4px solid red;
 }
 
 .navbar ul li a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
     background: rgba(255, 255, 255, 0.1);
-    color: rgba(0, 35, 122, 0.7);
+    color: white;
 }
 /* For screens 400px and smaller */
 @media (max-width: 400px) {
