--- a/src/Pages/homepage.module.css
+++ b/src/Pages/homepage.module.css
@@ -7,13 +7,13 @@ header {
 
 body {
   margin-bottom: 50px;
-  background-color: black;
+  background-color: white;
 }
 
 .cuisineSection {
   margin: 20px;
   padding: 20px;
-  
+  height: 300px;
   padding-bottom: 40px;
   background-color: #fff;
   border-radius: 8px;
